--- a/style.css
+++ b/style.css
@@ -3196,3 +3196,32 @@ ul .content::-webkit-scrollbar {
     margin-right: 5px;
     text-decoration: underline;
 }
+
+.ty {
+    color: aliceblue;
+    text-shadow: 0 0 00px #fff;
+    position: fixed;
+    left: 7px;
+    bottom: 0;
+    width: 100%;
+    background: transparent;
+    color: aliceblue;
+    text-align: left;
+}
+
+.dev {
+    text-align: right;
+    position: fixed;
+    right: 2px;
+    bottom: 0;
+    width: 100%;
+    background: transparent;
+    background: transparent;
+    color: aliceblue;
+    text-shadow: 0 0 00px #fff;
+}
+
+a {
+    color: aliceblue;
+    text-decoration: none;
+}
